cncamp/httpserver/deploy/httpserver-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  labels:
    app: httpserver
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: "http"
  selector:
    run: httpserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: httpserver
  name: httpserver
spec:
  replicas: 2
  selector:
    matchLabels:
      run: httpserver
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        run: httpserver
    spec:
#      readinessGates:
#        - conditionType: "www.example.com/feature-1"
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - image: zheng11581/httpserver:v3.0-metrics
#        - image: 192.168.110.72/gene/httpserver:v3.0-metrics
          name: httpserver
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              port: 8080
              path: /healthz
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              port: 8080
              path: /healthz
            periodSeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              port: 8080
              path: /healthz
            periodSeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 128Mi
              cpu: 100m
      # qosClass: burstable
